content/consul/v2.0.x/content/docs/discover/service/dynamic.mdx
---
layout: docs
page_title: Perform dynamic DNS service lookups with prepared queries
description: >-
  Learn how to dynamically query the Consul DNS using prepared queries, which enable robust service and node lookups.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-03-31T20:44:53.000Z
last_modified: 2026-03-31T20:44:53.000Z
# END AUTO GENERATED METADATA
---

# Perform dynamic service lookups with prepared queries

This topic describes how to dynamically query the Consul catalog using prepared queries. Prepared queries are configurations that let you register a complex service query and execute it on demand. For information about how to perform standard node and service lookups, refer to [Perform static DNS queries](/consul/docs/discover/service/static).

## Introduction

Prepared queries provide a rich set of lookup features, such as filtering by multiple tags and automatically failing over to look for services in remote datacenters if no healthy nodes are available in the local datacenter. You can also create prepared query templates that match names using a prefix match, allowing a single template to apply to potentially many services. Refer to [Consul DNS overview](/consul/docs/discover/dns) for additional information about DNS query behaviors.

## Requirements

Consul supports prepared queries for services registered with a single port, which excludes [multiport services](/consul/docs/connect/proxy/multiport). You cannot filter for [a service's `ports` parameter](/consul/docs/reference/service#port) when using prepared queries.

### ACLs

If ACLs are enabled, the querying service must present a token linked to permissions that enable read access for query, service, and node resources. Refer to the following documentation for information about creating policies to enable read access to the necessary resources:

- [Prepared query rules](/consul/docs/secure/acl/rule#prepared-query-rules)
- [Service rules](/consul/docs/secure/acl/rule#service-rules)
- [Node rules](/consul/docs/secure/acl/rule#node-rules)

## Create prepared queries

Refer to the [prepared query reference](/consul/api-docs/query#create-prepared-query) for usage information.

1. Specify the prepared query options in JSON format. The following prepared query targets all instances of the `redis` service in `dc1` and `dc2`:

  <CodeBlockConfig filename="payload.json">

  ```json
  {
    "Name": "my-query",
    "Session": "adf4238a-882b-9ddc-4a9d-5b6758e4159e",
    "Token": "",
      "Service": {
        "Service": "redis",
        "Failover": {
          "NearestN": 3,
          "Datacenters": ["dc1", "dc2"]
        },
        "Near": "node1",
        "OnlyPassing": false,
        "Tags": ["primary", "!experimental"],
        "NodeMeta": {
          "instance_type": "m3.large"
        },
        "ServiceMeta": {
          "environment": "production"
        }
      },
      "DNS": {
        "TTL": "10s"
      }
  }
  ```

  </CodeBlockConfig>

  Refer to the [prepared query configuration reference](/consul/api-docs/query#create-prepared-query) for information about all available options.

1. Send the query in a POST request to the [`/query` API endpoint](/consul/api-docs/query). If the request is successful, Consul prints an ID for the prepared query.

  In the following example, the prepared query configuration is stored in the `payload.json` file:

  ```shell-session
  $ curl --request POST --data @payload.json http://127.0.0.1:8500/v1/query
  {"ID":"014af5ff-29e6-e972-dcf8-6ee602137127"}%
  ```

1. To run the query, send a GET request to the endpoint and specify the ID returned from the POST call.

  ```shell-session
  $ curl http://127.0.0.1:8500/v1/query/14af5ff-29e6-e972-dcf8-6ee602137127/execute\?near\=_agent
  ```

## Execute prepared queries

You can execute a prepared query using the standard lookup format or the strict RFC 2782 SRV lookup.

### Standard lookup

Use the following format to execute a prepared query using the standard lookup format:

```
<query name or id>.query[.<datacenter>].<domain>
```

Refer [Standard lookup](/consul/docs/discover/service/static#standard-lookups) for additional information about the standard lookup format in Consul.

### RFC 2782 SRV lookup

Use the following format to execute a prepared query using the RFC 2782 lookup format:

```
_<query name or id>._tcp.query[.<datacenter>].<domain>
```

For additional information about following the RFC 2782 SRV lookup format in Consul, refer to [RFC 2782 Lookup](/consul/docs/discover/service/static#rfc-2782-lookup). For general information about the RFC 2782 specification, refer to [A DNS RR for specifying the location of services \(DNS SRV\)](https://tools.ietf.org/html/rfc2782).

### Lookup options

The `datacenter` subdomain is optional. By default, the lookup queries the datacenter of this Consul agent.

The `query name` or `id` subdomain is the name or ID of an existing prepared query.

## Query results

To allow for simple load balancing, Consul returns the set of nodes in random order for each query. Prepared queries support A and SRV records. SRV records provide the port that a service is registered. Consul only serves SRV records if the client specifically requests them.
